public/styles.css
:root {
  --primary-bg: #0a0a0a;
  --primary-text: #fff;
  --secondary-bg: #27272a;
  --message-bg: #3f3f3f;
  --message-info-bg: #171717;
  --muted-text: #6a7282;
  --border-color: #1e2939;
  --link-hover: #155dfb;
  --accent-color-primary: #193cb8;
  --admin-color: #ff637e;
  --member-color: #fe9a00;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  background-color: var(--primary-bg);
  color: var(--primary-text);
  overflow-x: hidden;
}

/* navbar */
nav a {
  color: white;
  text-decoration: none;
  transition: all 0.3s;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  border-bottom: 4px solid var(--border-color);
}

nav > a {
  font-size: 1.5rem;
}

.links {
  display: flex;
  gap: 2rem;
  font-size: 1.2rem;
}

nav a:hover {
  transform: translateY(-4px);
  color: var(--link-hover);
}

/* welcome message */
.admin-icon,
.member-icon {
  max-width: 32px;
  max-height: 32px;
}
.admin-icon {
  fill: var(--admin-color);
}
.member-icon {
  color: var(--member-color);
}
.welcome {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}
/* chat */
section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 2rem 1rem;
  width: 100%;
  box-sizing: border-box;
}

.messages {
  background-color: var(--secondary-bg);
  padding: 2rem;
  overflow-y: auto;
  max-height: 50vh;
  width: 50%;
  border-radius: 1.5rem;
  box-shadow: 4px 8px 8px rgba(255, 255, 255, 0.1);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

/* scrollbar */
.messages::-webkit-scrollbar {
  width: 8px;
}

.messages::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.messages::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  transition: background 0.3s ease;
}

.messages::-webkit-scrollbar-thumb:hover {
  background: rgba(0, 0, 0, 0.5);
}
.messages {
  scrollbar-width: thin;
  scrollbar-color: rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.1);
}

/* messages */
.message-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  background-color: var(--message-bg);
  border-radius: 1rem;
}
.message-info {
  background-color: var(--message-info-bg);
  border-radius: 1rem 1rem 0px 0px;
  border-bottom: 2px solid var(--border-color);
  padding: 0.5rem;
}
.message {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.6rem;
}
.message-info .title {
  margin: 0;
  font-size: 1.2rem;
  font-weight: 600;
}

.message-info .author,
.message-info .timestamp {
  margin: 0.25rem 0;
  color: var(--muted-text);
  font-size: 0.9rem;
}
.message p {
  margin: 0;
  line-height: 1.6;
}
.message a {
  color: var(--accent-color-primary);
  text-decoration: none;
  margin-right: 1rem;
  transition: color 0.3s;
}
.message a:hover {
  color: var(--link-hover);
}
/* forms */
.errors {
  display: flex;
  flex-direction: column;
  color: #fb2c36;
  list-style-type: none;
  margin: 0px;
  padding: 1rem;
  gap: 0.5rem;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  gap: 0.8rem;
}

label {
  font-weight: 600;
}
input,
textarea {
  padding: 0.5rem 0.7rem;
  border-radius: 1rem;
  background-color: var(--secondary-bg);
  border: none;
  color: var(--primary-text);
  transition: transform 0.3s;
}
input:focus,
textarea:focus {
  transform: scale(1.05);
  border: 1px solid --border-color;
}

textarea {
  resize: vertical;
}

button {
  padding: 0.5rem 0.75rem;
  font-weight: 600;
  border-radius: 0.5rem;
  background-color: var(--accent-color-primary);
  color: white;
  border: none;
  transition: transform 0.3s ease-in-out;
}

button:hover {
  transform: scale(1.1);
  border: 1px solid var(--border-color);
  cursor: pointer;
}
form a {
  color: var(--accent-color-primary);
  text-decoration: none;
  transition: all 0.3s;
}
form a:hover {
  transform: scale(1.1);
  color: var(--link-hover);
}

.controls a {
  padding: 0.5rem 0.75rem;
  border-radius: 1rem;
  background-color: var(--accent-color-primary);
  color: white;
  text-decoration: none;
  transition: all 0.3s;
}

.controls a:hover {
  background: var(--link-hover);
  color: white;
  transform: scale(1.1);
}

